[gd_scene load_steps=7 format=3 uid="uid://cmmfsbgw6071j"]

[ext_resource type="Script" uid="uid://dmn3b3jxnoby0" path="res://Scenes/Modes/modes.gd" id="1_h1bhu"]
[ext_resource type="PackedScene" uid="uid://do2raj5ioala3" path="res://Global/Interface/Background/bg.tscn" id="2_rpa20"]
[ext_resource type="PackedScene" uid="uid://cxba6dprkg4gp" path="res://Global/Interface/ScreenGridVertical/screen_grid_vertical.tscn" id="3_q2gtb"]
[ext_resource type="Texture2D" uid="uid://cnpnhqxaq4rfl" path="res://icon.svg" id="4_cqibp"]
[ext_resource type="PackedScene" uid="uid://2d7cuw3cs6p0" path="res://Global/Interface/Label/label_defaut.tscn" id="5_oi201"]
[ext_resource type="PackedScene" uid="uid://dl21gbumyn8vd" path="res://Global/Interface/ScreenGridHorizontal/screen_grid_horizontal.tscn" id="5_ykes7"]

[node name="Modes" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h1bhu")
screen_name = "Selecione O Modo De Jogo"
screen_name_font_size = 50

[node name="BG" parent="." instance=ExtResource("2_rpa20")]
layout_mode = 2

[node name="ScreenGridVertical" parent="BG" instance=ExtResource("3_q2gtb")]
layout_mode = 1
theme_override_constants/separation = 0

[node name="TopBar" type="MarginContainer" parent="BG/ScreenGridVertical"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="BG" parent="BG/ScreenGridVertical/TopBar" instance=ExtResource("2_rpa20")]
self_modulate = Color(0.118581, 0.118581, 0.118581, 1)
layout_mode = 2

[node name="Logo" type="MarginContainer" parent="BG/ScreenGridVertical/TopBar"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextureRect" type="TextureRect" parent="BG/ScreenGridVertical/TopBar/Logo"]
layout_mode = 2
texture = ExtResource("4_cqibp")
expand_mode = 1
stretch_mode = 5

[node name="NameScreen" parent="BG/ScreenGridVertical" instance=ExtResource("5_oi201")]
layout_mode = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 25

[node name="Scroll" type="ScrollContainer" parent="BG/ScreenGridVertical"]
layout_mode = 2
size_flags_vertical = 3
vertical_scroll_mode = 0

[node name="ScreenGridHorizontal" parent="BG/ScreenGridVertical/Scroll" instance=ExtResource("5_ykes7")]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
